--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body{
 }
 /* left  */
 .left-card{
-  border: 1px solid brown;
+  /* border: 1px solid brown; */
   display: grid;
   place-content: center;
   gap: 1rem;
@@ -105,7 +105,7 @@ body{
 }
 
 .flex-form{
-  border: 1px solid green;
+  /* border: 1px solid green; */
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -123,8 +123,11 @@ body{
   border-radius: 100vw;
   width: 100%;
   padding-left: 1rem;
+  background-color: transparent;
 }
-
+::placeholder{
+  color: #F5DAD2;
+}
 
 
 
@@ -133,7 +136,7 @@ body{
   right: 0;
   top: 0;
   height: 100%;
-  width: 70px;
+  width: 90px;
   border-radius: 100vw;
   background-image: linear-gradient( 135deg,  hsl(0, 80%, 86%),  hsl(0, 74%, 74%));
   
@@ -163,28 +166,66 @@ body{
 
 
 }
+.error-icon{
+  position: absolute;
+  right: 105px;
+}
+.error-text{
+  position: absolute;
+  top: 60px;
+  left: 1rem;
+  color: red;
+}
+
+/* toggle show and no show */
+.none{
+  display: none;
+}
+.collapse{
+  display: block;
+}
 
 @media (min-width: 600px) {
-    body{
+    
+    header{
+      position: absolute;
+      padding-left: 10%;
+      padding-top: 5%;
+    }
+    .container{
+      padding-left: 9%;
       display: grid;
-      grid-template-columns: 600px auto;
-      /* grid-template-rows:  300px 1fr; */
+      grid-template-columns:  1fr 1fr;
+      gap: 0;
+      background-image: url(./images/bg-pattern-desktop.svg);
+      
     }
     .right-card{
       background-image: url(./images/hero-desktop.jpg);
       background-size: cover;
-      height: 100%;
+      height: 100vh;
     }
     .left-card{
-      text-align: left;
 
+      max-width: 500px;
+      min-height: 100vh;
     }
+    .title{
+      text-align: left;
+      line-height: 1.25;
+      font-size: 2.75rem;
+    }
+    .inner-content{
+      text-align: left;
+      font-size: 1.1rem;
+    }
+    
 }
 
 
 /* footer */
   .attribution { 
-    font-size: 11px; 
+    font-size: 12px; 
     text-align: center; 
 }
   .attribution a { 
