--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body{
   justify-content: start;
   align-items: center;
 
-  border: 1px solid red;
+  /* border: 1px solid red; */
 
   min-height: 100vh;
 }
