--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ body{
   font-weight: 100 700;
   font-style: normal;
 }
+header{
+  padding: 2rem;
+  width: 200px;
+}
 
 .container{
   display: flex;
